SOMbrero 1.4 (major release)

New features:
  numeric SOM can now handle missing data

Fixed bugs:
  proto0 was incorrectly used for 'numeric' (see bug report #4 on Github)
  
  dist.type was improperly handled for types other than 'euclidean' and 
  'letremy' when radius.type was letremy
  
  minor bug in computation of tolerance for numerical approximations with 
  Gaussian radius
  
  removed 'tolerance' from the prediction (not used any more)
  
  fixed minor issues in OO for trainSOM
  
Improvements:
  Heskes' affectation now account for total neighbord weight in order to not 
  favor too much the borders of the map
  
Misc: 
  refactorization of most of the code

********************************************************************************
SOMbrero 1.3-1

Improvements:
  make trainSOM a method for different classes
  
  create a trainSOM method for outputs of mixKernel package

********************************************************************************
SOMbrero 1.3
Fixed bugs:
  eps0 parameter taken into account in shiny app
  correct use of "what" parameter for superclasses plot
  fixed a minor problem in Heskes' assignment when distance is Euclidean

Improvements:
  hexagonal topography is now available
  
  plots are now ggplot2 based and former plot arguments are no longer valid 
  since ggplot2 syntax is now used
  
  the shiny app has been entirely remade
  
  data from the environment can be loaded directly in the shiny application and
  3 examples datasets are loaded automatically in the shiny app
  
  titles and legends in plots have been improved

  code used in the app is printed to ease reproducibility
  
  protoDist (for neighbors) has been improved by adding, for the case 
  'neighbors' a radius argument. When this radius is passed the Euclidean 
  distance between unit coordinates
  
  print.titles is deprecated and has been replaced by show.names
  
  
Misc:
  radar plots are no longer available
