@@ -57,6 +57,7 @@ importFrom(stats,cutree)
 importFrom(stats,dist)
 importFrom(stats,hclust)
 importFrom(stats,median)
+importFrom(stats,na.omit)
 importFrom(stats,pf)
 importFrom(stats,princomp)
 importFrom(stats,quantile)
