@@ -18,7 +18,7 @@
 #' Package: \tab SOMbrero\cr
 #' Type: \tab Package\cr
 #' Version: \tab 1.4\cr
-#' Date: \tab 2021-05-16\cr
+#' Date: \tab 2022-01-03\cr
 #' License: \tab GPL (>= 2)
 #' }
 #' 
@@ -28,10 +28,15 @@
 #' Several variants able to handle non-vectorial data are also implemented in 
 #' their stochastic versions: \code{type = "korresp"} for contingency tables, as 
 #' described in Cottrell et al. (2004) (with the observation weights defined in 
-#' Cottrell and Letrémy, 2005) and \code{type = "relational"} for dissimilarity 
+#' Cottrell and Letrémy, 2005a) and \code{type = "relational"} for dissimilarity 
 #' data, as described in Olteanu and Villa-Vialaneix (2015a) with the fast 
 #' implementation of Mariette \emph{et al.} (2017). A special focus has been put 
 #' on representing graphs, as described in Olteanu and Villa-Vialaneix (2015b).
+#' 
+#' In addition, the numeric version of the algorithm handles missing values: 
+#' missing entries are not used during training but the resulting map can be 
+#' used to fill missing entries (using the entry of the corresponding 
+#' prototype). The method is taken from Cottrell and Letrémy (2005b).
 #' 
 #' @author Nathalie Vialaneix \email{nathalie.vialaneix@inrae.fr}\cr
 #' Élise Maigné <elise.maigne@inrae.fr>\cr
@@ -49,9 +54,13 @@
 #' Cottrell M., Ibbou S., Letrémy P. (2004) SOM-based algorithms for qualitative
 #' variables. \emph{Neural Networks}, \strong{17}, 1149-1167.
 #' 
-#' Cottrell M., Letrémy P. (2005) How to use the Kohonen algorithm to 
+#' Cottrell M., Letrémy P. (2005a) How to use the Kohonen algorithm to 
 #' simultaneously analyse individuals in a survey. \emph{Neurocomputing}, 
 #' \strong{21}, 119-138.
+#' 
+#' Cottrell M., Letrémy P. (2005b) Missing values: processing with the Kohonen 
+#' algorithm. \emph{Proceedings of Applied Stochastic Models and Data Analysis
+#' (ASMDA 2005)}, 489-496.
 #' 
 #' Letrémy P. (2005) Programmes basés sur l'algorithme de Kohonen et dediés à
 #' l'analyse des données. SAS/IML programs for 'korresp'.
@@ -88,7 +97,7 @@
 #' @importFrom graphics layout legend par plot rect text title points
 #' @importFrom stats aov as.dist chisq.test cmdscale cutree dist hclust pf
 #' @importFrom stats princomp quantile rect.hclust runif sd aggregate median
-#' @importFrom stats reshape var
+#' @importFrom stats reshape var na.omit
 #' @importFrom scatterplot3d scatterplot3d
 #' @importFrom ggwordcloud geom_text_wordcloud
 #' @importFrom metR geom_contour_fill	
